# node-aios

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  binding.gyp  gulpfile.ts  package-lock.json  package.json  tsconfig.json  tslint.json
docker/: docker-compose.yml  log4j2.xml
docs/: native.adoc
lib/: actions.js  asyncsock.js  connection.js  datasource.js  server.js  syncsock.js
src/: actions.ts  addon.cc  connection.ts  datasource.ts  index.ts  server.ts  sockit.cc  sockit.h  utils.ts
test/: connection.async.test.js  connection.sync.test.js  connection.test.js  mocha.all.opts  mocha.opts  server.async.test.js  server.informix.async.test.js  server.sync.test.js  server.test.js
test/functional/: connection.async.spec.ts  server.async.spec.ts  server.informix.async.spec.ts
